--- a/app/src/main/res/layout/activity_mail.xml
+++ b/app/src/main/res/layout/activity_mail.xml
@@ -60,8 +60,7 @@
                 android:inputType="textEmailAddress"
                 android:id="@+id/mailText"
                 android:textColor="@android:color/background_light"
-                android:maxLength="20"
-                />
+                android:maxLength="20" />
 
             <TextView
                 android:layout_width="match_parent"
