商品登録機能の作成途中 登録画面の修正 Stringファイルの中身の整理

--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -95,7 +95,7 @@
         android:layout_below="@+id/textView2"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/title"
-        android:entries="@array/agelist"
+        android:entries="@array/list_age"
         android:layout_alignEnd="@+id/title"
         android:spinnerMode="dialog" />
 
